[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stollen"
description = "An asynchronous framework to easily build a client-side API"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
maintainers = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
keywords = [
    "api",
    "framework",
    "wrapper",
    "asyncio",
    "client",
]
dependencies = [
    "aiohttp>=3.9.0,<3.12",
    "pydantic>=2.4.1,<2.11",
    "aiofiles>=23.2.1,<24.2",
    "certifi>=2023.7.22",
    "typing-extensions>=4.7.0,<=5.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[tool.hatch.version]
path = "stollen/__meta__.py"

[project.optional-dependencies]
dev = [
    "black~=24.10.0",
    "ruff~=0.6.0",
    "mypy~=1.10.0",
    "pre-commit~=3.6",
    "types-aiofiles>=24.1.0.20240626",
]
proxy = [
    "aiohttp-socks>=0.8,<0.10",
]

[project.urls]
Source = "https://github.com/py-stollen/stollen"
Issues = "https://github.com/py-stollen/stollen/issues"

[tool.black]
line-length = 99
target-version = ['py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | \.?venv
  | build
  | dist
)
'''

[tool.ruff]
target-version = "py38"
line-length = 99
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "docs",
    "tests",
    "dev",
    "scripts",
    "*.egg-info",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [".venv", ".idea"]
